--- a/1/1.2.md
+++ b/1/1.2.md
@@ -1,1 +1,50 @@
+## ? Первые примеры statement'ов
+`Nevergonna give you up`
 
+## > Считаем выражения и выводим числа
+```c
+printf("%d", 17283 + 5 * 6 * 7 * 8);
+```
+
+## > Напишите определение функции с именем print_newline...
+```c
+void print_newline() {
+    printf("\n");
+}
+```
+
+## > Представим, что мы уже определили несколько функций:...
+
+```c
+greet();
+b();
+print_newline();
+greet();
+v();
+print_newline();
+greet();
+b();
+print_newline();
+```
+
+## > Вам дано определение функции:...
+```c
+greet(10);
+greet(20);
+greet(42);
+```
+
+## > Функции с несколькими аргументами
+```c
+void f(int n1, int n2) {
+    printf("%d", n1 + n2);
+}
+```
+
+## > Напишите функцию avg3 с тремя аргументами...
+
+```c
+int avg3(int n1, int n2, int n3) {
+    return (n1 + n2 + n3) / 3;
+}
+```
