--- a/1/1.2.md
+++ b/1/1.2.md
@@ -1,19 +1,19 @@
-## ? Первые примеры statement'ов
+### ? Первые примеры statement'ов
 `Nevergonna give you up`
 
-## > Считаем выражения и выводим числа
+### > Считаем выражения и выводим числа
 ```c
 printf("%d", 17283 + 5 * 6 * 7 * 8);
 ```
 
-## > Напишите определение функции с именем print_newline...
+### > Напишите определение функции с именем print_newline...
 ```c
 void print_newline() {
     printf("\n");
 }
 ```
 
-## > Представим, что мы уже определили несколько функций:...
+### > Представим, что мы уже определили несколько функций:...
 
 ```c
 greet();
@@ -27,21 +27,21 @@ b();
 print_newline();
 ```
 
-## > Вам дано определение функции:...
+### > Вам дано определение функции:...
 ```c
 greet(10);
 greet(20);
 greet(42);
 ```
 
-## > Функции с несколькими аргументами
+### > Функции с несколькими аргументами
 ```c
 void f(int n1, int n2) {
     printf("%d", n1 + n2);
 }
 ```
 
-## > Напишите функцию avg3 с тремя аргументами...
+### > Напишите функцию avg3 с тремя аргументами...
 
 ```c
 int avg3(int n1, int n2, int n3) {
