--- a/1/1.3.md
+++ b/1/1.3.md
@@ -10,11 +10,16 @@
 ### ? Выберите истинные условия...
 - [x] 4 > 3
 - [x] (44 > 99) || (99 > 44)
-
+- [ ] 0
+- [ ] (99 <= 83)
+- [ ] (44 > 99) && (99 > 44)
+ 
 ### ? Выберите истинные условия...
+- [ ] (1 > 2) > 3
 - [x] (1 > 2) > 3
 - [x] 1 && 9
 - [x] 0 || 9
+- [ ] 8 && (5 < 4)
 
 ### > Ошибка control reaches the end of non-void function
 ```c
@@ -79,7 +84,7 @@ int max3(int a, int b, int c) {
 }
 ```
 
-### Напишите функцию fizzbuzz, которая...
+### > Напишите функцию fizzbuzz, которая...
 ```c
 void fizzbuzz(int n) {
     if (n <= 0) {
