--- a/2/2.1.md
+++ b/2/2.1.md
@@ -1,1 +1,42 @@
+### ? Существует численный тип называющийся...
 
+- [x] Да, такой компилятор соответствует стандарту языка
+- [ ] Нет, такой компилятор нарушает стандарт
+- [ ] Ни один из ответов не является правильным
+
+### > Создайте массив правильного типа и определите...
+```c
+// Определите массив в котором будут 8*1024*1024 чисел
+// Массив не должен занимать больше 40 МБ памяти
+
+uint32_t data[8*1024*1024] = {0};
+
+// Определите функцию count_gt
+// Она должна вернуть количество чисел в data, которые больше LIMIT
+// LIMIT это определение препроцессора, оно вам уже доступно
+// скрытый от вас код заполнит массив data числами и проверит правильность
+// вашей функции
+size_t count_gt(uint32_t* array, size_t size) {
+    size_t counter = 0;
+    for (size_t i = 0; i < size; i++) {
+        if (array[i] > LIMIT) {
+            counter++;
+        }
+    }
+    return counter;
+}
+```
+
+### > Напишите функцию, которая считает количество...
+```c
+size_t count_zeroes(void const* data, size_t sz ) {
+    char* array = (char*)data;
+    size_t counter = 0;
+    for (size_t i = 0; i < sz; i++) {
+        if (array[i] == 0) {
+            counter++;
+        }
+    }
+    return counter;
+}
+```
