--- a/3/3.1.md
+++ b/3/3.1.md
@@ -1,1 +1,307 @@
+### ? Стёк 1.0
+`42`
 
+### ? Список команд Стёка
+`80 1`
+
+### > Как закодировать программу на Стёке внутри программы на C?
+```c
+const union ins program[] = {
+    {BC_IREAD},
+    {.as_arg64={BC_PUSH, .arg=10}},
+    {BC_ISUB},
+    {.as_arg64={BC_PUSH, .arg=2}},
+    {BC_IDIV},
+    {BC_IPRINT},
+    {BC_STOP}
+};
+```
+
+### ? Чему равен x после выполнения кода:...
+`1`
+
+### ? Чему равен x после выполнения кода:...
+`3`
+
+### > Интерпретатор Стёка
+```c
+/* Описание инструкций (см. предыдущий шаг) */
+enum opcode { BC_PUSH, BC_IPRINT, BC_IREAD, BC_IADD, BC_STOP };
+
+struct bc_noarg {
+  enum opcode opcode;
+};
+struct bc_arg64 {
+  enum opcode opcode;
+  int64_t arg;
+};
+union ins {
+  enum opcode opcode;
+  struct bc_arg64 as_arg64;
+  struct bc_noarg as_noarg;
+};
+
+/* ------------------------ */
+
+struct vm_state {
+  const union ins *ip;
+  struct stack data_stack;
+};
+
+/* Начальная вместимость стека задаётся определением STACK_CAPACITY */
+struct vm_state state_create(const union ins *ip) {
+  return (struct vm_state){.ip = ip,
+                           .data_stack = stack_create(STACK_CAPACITY)};
+}
+
+// Как правильно деинициализировать состояние, освободить все ресурсы?
+void state_destroy(struct vm_state* state) {
+    stack_destroy(&state->data_stack);
+    state->ip = NULL;
+}
+
+
+/* Вы можете использовать эти функции: */
+void print_int64(int64_t);
+struct maybe_int64 maybe_read_int64();
+
+struct stack stack_create(size_t size);
+void stack_destroy(struct stack *s);
+bool stack_push(struct stack *s, int64_t value);
+struct maybe_int64 stack_pop(struct stack *s);
+
+/* Опишите цикл интерпретации с выборкой и выполнением команд (пока не выполним STOP) */
+void interpret(struct vm_state* state) {
+    bool stop = false;
+    struct stack* stack = &state->data_stack;
+    while (!stop) {
+        switch (state->ip->opcode) {
+            case BC_IADD: {
+                struct maybe_int64 x = stack_pop(stack);
+                struct maybe_int64 y = stack_pop(stack);
+                if (x.valid && y.valid) {
+                    stack_push(stack, x.value + y.value);
+                }
+                break;
+            }
+            case BC_IPRINT: {
+                struct maybe_int64 x = stack_pop(stack);
+                if (x.valid) {
+                    print_int64(x.value);
+                }
+                break;
+            }
+            case BC_IREAD: {
+                struct maybe_int64 x = maybe_read_int64();
+                if (x.valid) {
+                    stack_push(stack, x.value);
+                }
+                break;
+            }
+            case BC_PUSH: {
+                int64_t x = state->ip->as_arg64.arg;
+                stack_push(stack, x);
+                break;
+            }
+            case BC_STOP: {
+                stop = true;
+                break;
+            }
+        }
+        state->ip += 1;
+    }
+}
+
+void interpret_program(const union ins *program) {
+  struct vm_state state = state_create(program);
+  interpret(&state);
+  state_destroy(&state);
+}
+```
+
+### > Интерпретатор декларативно
+```c
+/* Вам доступны:
+
+
+struct maybe_int64 {
+    int64_t value; 
+    bool valid; 
+};
+
+struct maybe_int64 some_int64(int64_t i);
+
+extern const struct maybe_int64 none_int64;
+
+void maybe_int64_print( struct maybe_int64 i );
+struct maybe_int64 maybe_read_int64();
+void print_int64(int64_t i)
+*/
+
+void interpret_push(struct vm_state* state) {
+    stack_push(&state->data_stack, state->ip->as_arg64.arg);
+}
+
+void interpret_iread(struct vm_state* state) {
+    struct maybe_int64 x = maybe_read_int64();
+    if (x.valid) {
+        stack_push(&state->data_stack, x.value);
+    }
+}
+
+void interpret_iadd(struct vm_state* state) {
+    struct maybe_int64 x = stack_pop(&state->data_stack);
+    struct maybe_int64 y = stack_pop(&state->data_stack);
+    if (x.valid && y.valid) {
+        stack_push(&state->data_stack, x.value + y.value);
+    }
+}
+
+void interpret_iprint(struct vm_state* state) {
+    struct maybe_int64 x = stack_pop(&state->data_stack);
+    if (x.valid) {
+        print_int64(x.value);
+    }
+}
+
+/* Подсказка: можно выполнять программу пока ip != NULL,
+    тогда чтобы её остановить достаточно обнулить ip */
+void interpret_stop(struct vm_state* state) {
+    state->ip = NULL;
+}
+
+typedef void (*interpret_ins)(struct vm_state*);
+
+interpret_ins interpreters[] = {
+    [BC_PUSH] = interpret_push,
+    [BC_STOP] = interpret_stop,
+    [BC_IREAD] = interpret_iread,
+    [BC_IADD] = interpret_iadd,
+    [BC_IPRINT] = interpret_iprint
+};
+
+void interpret(struct vm_state* state) {
+    while (state->ip != NULL) {
+        interpreters[state->ip->opcode](state);
+        if (state->ip != NULL) {
+            state->ip += 1;   
+        }
+    }
+}
+```
+
+### > Больше инструкций
+```c
+/* Вам уже доступны функции: */
+bool stack_push( struct stack* s, int64_t value );
+struct maybe_int64 stack_pop( struct stack* s );
+
+/*
+  struct maybe_int64 {
+  int64_t value;
+  bool valid;
+  };
+*/
+struct maybe_int64 some_int64(int64_t i);
+/*  const struct maybe_int64 none_int64; */
+
+
+
+/*  Интерпретаторы команд */
+void interpret_swap (struct vm_state* state) {
+    struct maybe_int64 x = stack_pop(&state->data_stack);
+    struct maybe_int64 y = stack_pop(&state->data_stack);
+    if (x.valid && y.valid) {
+        stack_push(&state->data_stack, x.value);
+        stack_push(&state->data_stack, y.value);
+    }
+}
+
+void interpret_pop (struct vm_state* state) {
+    stack_pop(&state->data_stack);
+}
+
+void interpret_dup (struct vm_state* state) {
+    struct maybe_int64 x = stack_pop(&state->data_stack);
+    if (x.valid) {
+        stack_push(&state->data_stack, x.value);
+        stack_push(&state->data_stack, x.value);
+    }
+}
+
+// Эти функции поднимают операции над числами на уровень стековых операций
+// lift_unop применяет операцию к вершине стека;
+void lift_unop( struct stack* s, int64_t (f)(int64_t)) {
+    struct maybe_int64 x = stack_pop(s);
+    if (x.valid) {
+        stack_push(s, f(x.value));
+    }
+}
+
+// lift_binop забирает из стека два аргумента,
+// применяет к ним функцию от двух переменных и возвращает в стек результат
+void lift_binop( struct stack* s, int64_t (f)(int64_t, int64_t)) {
+    struct maybe_int64 x = stack_pop(s);
+    struct maybe_int64 y = stack_pop(s);
+    if (x.valid && y.valid) {
+        stack_push(s, f(y.value, x.value));
+    }
+}
+
+int64_t i64_add(int64_t a, int64_t b) { return a + b; }
+int64_t i64_sub(int64_t a, int64_t b) { return a - b; }
+int64_t i64_mul(int64_t a, int64_t b) { return a * b; }
+int64_t i64_div(int64_t a, int64_t b) { return a / b; }
+int64_t i64_cmp(int64_t a, int64_t b) { if (a > b) return 1; else if (a < b) return -1; return 0; }
+
+int64_t i64_neg(int64_t a) { return -a; }
+
+void interpret_iadd( struct vm_state* state ) { lift_binop(& state->data_stack, i64_add); }
+void interpret_isub( struct vm_state* state ) { lift_binop(& state->data_stack, i64_sub); }
+void interpret_imul( struct vm_state* state ) { lift_binop(& state->data_stack, i64_mul); }
+void interpret_idiv( struct vm_state* state ) { lift_binop(& state->data_stack, i64_div); }
+void interpret_icmp( struct vm_state* state ) { lift_binop(& state->data_stack, i64_cmp); }
+
+void interpret_ineg( struct vm_state* state ) { lift_unop (& state->data_stack, i64_neg);  }
+```
+
+### > Проверки состояния стека
+```c
+/*
+
+struct array_int {
+  int64_t* data;
+  size_t size;
+};
+
+struct stack {
+  size_t count;
+  struct array_int data;
+};
+
+*/
+
+void interpret(struct vm_state* state, ins_interpreter * const  (actions)[]) {
+  for (; state->ip ;) {
+    const union ins* ins = state->ip;
+
+    const struct ins_descr* ins_descr = instructions + ins->opcode;
+
+      // not enough elements -> "Stack underflow\n"
+      if ((&state->data_stack)->count < ins_descr->stack_min) {
+          printf("Stack underflow\n");
+          break;
+      }
+      
+      // too many elements -> "Stack overflow\n"
+      if ((ins_descr->stack_delta + (&state->data_stack)->count) > state->data_stack.data.size) {
+          printf("Stack overflow\n");
+          break;
+      }
+
+    actions[ins->opcode](state);
+
+    if (!ins_descr->affects_ip) { state->ip = state->ip + 1; }
+  }
+}
+```
